# ftblas

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  cblas.h  ftblas.h  params.h  utils.h
src/: CMakeLists.txt  cblas_dasum.cpp  cblas_daxpy.cpp  cblas_dcopy.cpp  cblas_ddot.cpp  cblas_dgemm.cpp  cblas_dgemv.cpp  cblas_dger.cpp  cblas_dnrm2.cpp  cblas_drot.cpp  cblas_drotm.cpp  cblas_dsbmv.cpp  cblas_dscal.cpp  cblas_dsdot.cpp  cblas_dspmv.cpp  cblas_dspr.cpp  cblas_dspr2.cpp  cblas_dswap.cpp  cblas_dsymm.cpp  cblas_dsyr.cpp  cblas_dsyr2.cpp  cblas_dtbmv.cpp  cblas_dtbsv.cpp  cblas_dtpmv.cpp  cblas_dtpsv.cpp  cblas_dtrmm.cpp  cblas_dtrmv.cpp  cblas_dtrsm.cpp  cblas_dtrsv.cpp  cblas_idamax.cpp  cblas_sasum.cpp  cblas_saxpy.cpp  cblas_scopy.cpp  dasum_avx512.cpp  dasum_avx512_ft.cpp  daxpy_avx2.cpp  daxpy_avx512.cpp  daxpy_avx512_ft.cpp  dcopy_avx512.cpp  ddot_avx2.c  (+53 more)
test/: CMakeLists.txt  test_daxpy_avx2.c  test_daxpy_avx2.cpp  test_daxpytemplate.cpp  test_ddot.cpp  test_ddot_avx2.c  test_ddot_avx2.cpp  test_ddottemplate.cpp  test_dgemm.cpp  test_dnrm2.c  test_dnrm2_avx2.c  test_dnrm2_avx2.cpp  test_dscal_avx2.c  test_ft_dnrm2_avx2.cpp
